# xcode-pipeline

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/task/: archive_local.rs  task.rs  task_registry.rs
core/: Cargo.toml
core/src/: git.rs  lib.rs  xcodebuild.rs
core/src/xcodebuild/: xcodebuild.rs  xcodebuild_command_factory.rs
core_derive/: Cargo.toml
core_derive/src/: lib.rs
scripts/: install.sh
xcode-pipeline/: Cargo.toml
xcode-pipeline/src/: filesystem.rs  main.rs  task.rs  validation.rs  xcodebuild.rs
xcode-pipeline/src/filesystem/: filesystem_repository.rs  filesystem_repository_fs_impl.rs  repository_impl.rs
xcode-pipeline/src/git/: git_service.rs  git_service_impl.rs
xcode-pipeline/src/macros/: lib.rs
xcode-pipeline/src/task/: archive_git.rs  archive_local.rs  cd_local.rs  task.rs  task_registry.rs
xcode-pipeline/src/xcodebuild/: mod.rs  xcodebuild.rs  xcodebuild_command_factory.rs
