[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.0"
getopts = "0.2"
rand = "0.8.5"
tracing = "0.1"

core = { path = "../core" }
core_derive = { path = "../core_derive" }