[package]
name = "xcode-pipeline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "macros"
path = "src/macros/lib.rs"
proc-macro = true

[[bin]]
name = "xc-cd"
path = "src/main.rs"

[dependencies]
args = "2.0"
getopts = "0.2"
rand = "0.8.5"
git2 = "0.13.25"
syn = "1.0"
quote = "1.0"